--- a/react-app/package.json
+++ b/react-app/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
-    "@tanstack/react-query": "^5.85.3",
+    "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "express-rate-limit": "^8.0.1",
     "framer-motion": "^12.23.12",
     "google-auth-library": "^10.2.1",
     "i18next": "^25.3.6",
