--- a/react-app/package.json
+++ b/react-app/package.json
@@ -26,6 +26,7 @@
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.6.1",
     "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.8.1",
     "react-select": "^5.10.2",
     "recharts": "^3.1.2"
   },
